# dtt-lab

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
benchmarks/: build_quadtree_bench.cpp  naive_bench.cpp
cuda/tree/: cuda-build.cu  cuda-traversal.cu
docs/: CONVENTIONS.md
docs/model/: overviewm.puml
examples/: sim_main.cpp  sim_main_naive.cpp  sim_main_tree.cpp
include/dtt/: util.h
include/dtt/app/: simulation-runner.h
include/dtt/core/: forces.h  memory.h  particles.h
include/dtt/io/: vtk.h
include/dtt/sim/: forces.h  particles.h
include/dtt/tree/: bounding-box.h  build.h  morton.h  quadtree.h  traversal.h  tree.h
legacy/: dtt.cpp  dummy_test.cpp  function_bench.cpp  quadtree_test.cpp  sim_main_tree.cpp  tree_bench.cpp
legacy/dtt/: dtt.h
legacy/dtt/io/: vtk.h
legacy/dtt/sim/: particles.h
legacy/dtt/tree/: bounding_box.h  quadtree.h
legacy/io/: vtk.cpp
legacy/sim/: forces.cpp
legacy/tree/: bounding_box.cpp  morton.cpp  quadtree.cpp
scripts/: build.sh  format.sh  run_sim.sh  run_sim_naive.sh  run_sim_tree.sh  test.sh
src/: util.cpp
src/core/: forces.cpp  particles.cpp
src/io/: vtk.cpp
src/sim/: forces.cpp  particles.cpp
src/tree/: bounding-box.cpp  build.cpp  morton.cpp  quadtree.cpp
tests/: build_quadtree_test.cpp  forces_test.cpp  particles_test.cpp  quadtree_test.cpp
